apps/mimir/noctua/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mimir-gateway
  namespace: mimir
spec:
  parentRefs:
  - name: main-gateway
    namespace: istio-system
  hostnames:
  - mimir.saadisfy.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: mimir-gateway
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mimir-query
  namespace: mimir
spec:
  parentRefs:
  - name: main-gateway
    namespace: istio-system
  hostnames:
  - mimir-query.saadisfy.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: mimir-query-frontend
      port: 8080
